# PyChaste

./: .gitignore  CMakeLists.txt  README.md  WrapPython.cmake
.github/: test-vtk.yml
.github/workflows/: conda-build-linux.yml  test-conda.yml  test-vtk.yml
doc/tutorials/: TestImmersedBoundaryTutorial.ipynb  TestImmersedBoundaryTutorial.md  TestImmersedBoundaryTutorial.nbconvert.ipynb
infra/conda/: .gitignore  README.md
infra/conda/chaste/.ci_support/: linux_64_python3.12.____cpython.yaml
infra/conda/chaste/2024.1/: build-package.sh
infra/conda/chaste/2024.1/recipe/: build.sh  meta.yaml
infra/conda/chaste/2024.1/variants/: linux_64_python3.10_cpython.yaml  linux_64_python3.11_cpython.yaml  linux_64_python3.12_cpython.yaml  linux_64_python3.8_cpython.yaml  linux_64_python3.9_cpython.yaml
infra/conda/chaste/py310/: build.sh
infra/conda/chaste/py310/.ci_support/: linux_64_python3.10.____cpython.yaml
infra/conda/chaste/py311/: build.sh
infra/conda/chaste/py312/: build.sh
infra/conda/chaste/py38/: build.sh
infra/conda/chaste/py38/.ci_support/: linux_64_python3.8.____cpython.yaml
infra/conda/chaste/py39/: build.sh
infra/conda/chaste/py39/.scripts/: build_steps.sh  run_docker_build.sh
infra/conda/vtk/7.1/: build-package.sh
infra/conda/vtk/7.1/recipe/: build.sh  meta.yaml
infra/conda/vtk/7.1/variants/: linux_64_python3.10_cpython.yaml  linux_64_python3.11_cpython.yaml  linux_64_python3.12_cpython.yaml  linux_64_python3.8_cpython.yaml  linux_64_python3.9_cpython.yaml
infra/conda/xsd/: build-package.sh
infra/conda/xsd/4.0/: build-package.sh
infra/conda/xsd/4.0/recipe/: build.sh  meta.yaml
infra/conda/xsd/4.0/variants/: linux_64.yaml  osx_64.yaml  osx_arm64.yaml
infra/conda/xsd/recipe/: build.sh  meta.yaml
infra/conda/xsd/variants/: linux_64_python3.8.____cpython.yaml
infra/docker/: Dockerfile
src/python/: setup.py
src/visualization/: CellPopulationPyChasteActorGenerator.cpp  VtkScene.cpp  VtkScene.hpp
test/: ContinuousTestPack.txt
test/python/: TestImports.py
test/python/cell_based/tutorials/: TestImmersedBoundaryTutorial.py
test/visualization/: TestVtkSceneWithCaBased.hpp
